[package]
name = "rust_orm_derive"
version = "0.1.0"
authors = ["Alayna Richmond <richmond.alayna@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
rust_orm_lib = { path = "../rust_orm_lib" }
syn = "1.0.5"
quote = "1.0.2"
postgres = "0.15.2"

